--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
+    "daisyui": "^4.9.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
