--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.1.4",
     "next-auth": "^5.0.0-beta.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-confirm": "^0.3.0-7",
+    "react-dom": "^18",
+    "react-st-modal": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
