--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-confirm": "^0.3.0-7",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "react-st-modal": "^1.1.3"
   },
   "devDependencies": {
