--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "flowbite-react": "^0.9.0",
     "mongoose": "^8.0.0",
     "next": "14.1.4",
