--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-confirm": "^0.3.0-7",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
-    "react-st-modal": "^1.1.3"
+    "react-st-modal": "^1.1.3",
+    "react-tabs": "^6.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
