--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-modal": "^3.16.1",
     "react-st-modal": "^1.1.3",
+    "react-switch": "^7.0.0",
     "react-tabs": "^6.0.2"
   },
   "devDependencies": {
