--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-modal": "^3.16.1",
     "react-st-modal": "^1.1.3",
     "react-switch": "^7.0.0",
-    "react-tabs": "^6.0.2"
+    "react-tabs": "^6.0.2",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20",
