--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "flowbite-react": "^0.9.0",
     "mongoose": "^8.0.0",
     "next": "14.1.4",
