--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bufferutil": "^4.0.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "flowbite-react": "^0.9.0",
     "mongoose": "^8.0.0",
-    "next": "14.1.4",
+    "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-confirm": "^0.3.0-7",
@@ -24,7 +25,9 @@
     "react-switch": "^7.0.0",
     "react-tabs": "^6.0.2",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "utf-8-validate": "^5.0.10",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/node": "^20",
