--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "flowbite-react": "^0.9.0",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "next": "^14.2.4",
     "next-auth": "^5.0.0-beta.3",
