--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^5.1.1",
     "bufferutil": "^4.0.8",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "utf-8-validate": "^5.0.10",
+    "uuid": "^10.0.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
